--- a/src/README
+++ b/src/README
@@ -1,3 +1,9 @@
+# Overview
+
+This is a modified version of Graph500 reference for Lucata. The intention here is to rip out the graph generator and compare it to those in beedrill or elsewhere. Beware the code is rough and likely undocumented.
+
+# Previous Docs from Graph500
+
 Graph500 Benchmark: MPI Reference Implementation (BFS and SSSP kernels) 
 Version 3.0.0rc1 
 Jeremiah Willcock and Andrew Lumsdaine, Anton Korzh
